src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/ARBComputeVariableGroupSize_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBComputeVariableGroupSize_StringErrorContext.class */
public final class ARBComputeVariableGroupSize_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glDispatchComputeGroupSizeARB(IIIIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBComputeVariableGroupSizeErrorContext");
        return methods;
    }
}
